Fixed size and layout of images background in news section on mobiles.

--- a/source/styles.css
+++ b/source/styles.css
@@ -432,7 +432,7 @@ body {
     border: 2px solid #fff;
 }
 .news-item .news-image:hover{
-    transform: scale(1.05);
+    transform: scale(1.02);
     box-shadow: 0 6px 20px rgba(0,0,0,0.25);
     border-color: #000;
 }
@@ -761,8 +761,7 @@ body {
     }
     
     .news-item .news-images {
-        margin: 20px;
-        width: calc(100% - 40px);
+        width: 100%;
     }
     
     .news-item .news-text {
